fix: Handle JVM parameters with spaces in sbtopts files
This change fixes issue #7333 where .sbtopts and .jvmopts files could not
properly handle JVM parameters containing spaces, such as:
  -J-Dsome.thing="foo bar"
  -J--add-modules jdk.incubator.concurrent

The fix introduces a new loadConfigFileArray function that:
- Reads config files line by line into a bash array
- Uses eval to properly parse quoted strings, preserving spaces
- Properly expands the array when setting command line arguments

This ensures that arguments like -Dkey="value with spaces" are passed
to the JVM as a single argument rather than being split on whitespace.

Fixes #7333